Remove forced auth for home page and add PKCE + `include_granted_scopes`